--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Welcome to the Case Management System</h1>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="services.html">Services</a></li>
